--- a/RecruitME-Backend/tsconfig.json
+++ b/RecruitME-Backend/tsconfig.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
         "target": "ES2020",
-        "module": "ES2020",
+        "module": "nodenext",
         "lib": [
             "ES2020"
         ],
-        "moduleResolution": "node",
+        "moduleResolution": "nodenext",
         "outDir": "./dist",
         "rootDir": "./src",
         "strict": true,
@@ -19,7 +19,8 @@
         "types": [
             "node",
             "express"
-        ]
+        ],
+        "allowImportingTsExtensions": true
     },
     "include": [
         "src/**/*"
