--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,7 @@
         "declarationMap": true,
         "sourceMap": true,
         "types": [
-            "node",
-            "express"
+            "node"
         ],
         "allowImportingTsExtensions": true
     },
